exercise done (fixed after live coding)

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
         <title>Document</title>
     </head>
     <body>
+        <button id="my-button">
+            show table
+        </button>
+        <!-- table -->
+        <div id="my-table">
+            <!-- <div class="cell teal-bg"></div> -->
+        </div>
         <!-- link js -->
         <script type="text/javascript" src="./js/script.js"></script>
     </body>
